yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick-api
  template:
    metadata:
      labels:
        app: rick-api
    spec:
      containers:
        - name: rick-api
          image: rick-api
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
